<?xml version="1.0" encoding="UTF-8" ?>
<!--
  ~ Copyright notice
  ~ Copyright (c) Nils Körting-Eberhardt 2021
  ~ Created: 02.01.2021 @ 23:06:17
  ~
  ~ All contents of this source code are protected by copyright. The copyright is owned by Nils Körting-Eberhardt, unless explicitly stated otherwise. All rights reserved.
  ~
  ~ pom.xml is part of the LostProxy which is licensed under the Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0) license.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0">

    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.lostname</groupId>
    <artifactId>LostProxy</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <description>This is the managing system for our proxies at LostName.eu</description>

    <developers>
        <developer>
            <id>main</id>
            <name>Nils K.-E.</name>
            <timezone>Europe/Berlin</timezone>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>cloudnet-repo</id>
            <url>https://repo.cloudnetservice.eu/repositories/snapshots</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-api</artifactId>
            <version>1.21-R0.3-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-api</artifactId>
            <version>1.21-R0.3-SNAPSHOT</version>
            <type>javadoc</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>driver</artifactId>
            <version>4.0.0-RC11.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>bridge</artifactId>
            <version>4.0.0-RC11.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>syncproxy</artifactId>
            <version>4.0.0-RC11.2</version>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>4.11.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>plugin.yml</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>